fixed issue where min-width of html exceeded pixel width on smaller mobile devices

--- a/css/menu.css
+++ b/css/menu.css
@@ -25,6 +25,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+    max-width: 100%;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -33,6 +34,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    max-width: 100%;
 }
 ol, ul {
 	list-style: none;
@@ -298,6 +300,10 @@ footer div.nav p.copyright {
 
 /* mobile media query */
 @media (max-width: 428px) {
+    html {
+        max-width: 100vw;
+        min-width: 100px;
+    }
     /* header section */
     header {
         display: flex;
@@ -353,6 +359,8 @@ footer div.nav p.copyright {
 
     .menu .background-color h2{
         padding-bottom: 0vh;
+        margin-right: 0vw;
+        margin-left: 0vw;
         margin-bottom: 5vh;
         border-bottom: solid 2vh rgb(0, 4, 17);
     }
@@ -396,14 +404,16 @@ footer div.nav p.copyright {
     .menu .background-color .menu-container .menu-section h3,
     .menu .background-color .menu-container2 .menu-section h3 {
         border: solid .75vh rgb(0, 4, 17);
-        padding: .5vh 1vw .5vh 1vw;
         text-align: center;
-        width: 75vw;
+        max-width: 75vw;
         align-self: center;
+        margin-right: 0vw;
+        margin-left: 0vw;
     }
 
     /* footer section */
     footer {
+        width: 100vw;
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
